add petrinet graph, modify json for graphviz, create petrinet.json.

--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'org.json:json:20180130'
     implementation 'org.python:jython-standalone:2.7.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.3'
 
 }
