--- a/Solver/build.gradle
+++ b/Solver/build.gradle
@@ -25,6 +25,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    compile files('libs/gurobi.jar')
+
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('com.jayway.jsonpath:json-path')
@@ -34,4 +36,6 @@ dependencies {
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.3'
     implementation 'org.javatuples:javatuples:1.2'
+
+
 }
