--- a/Solver/build.gradle
+++ b/Solver/build.gradle
@@ -14,8 +14,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
+    baseName = 'solver'
+    version =  '1.2'
 }
 
 repositories {
@@ -36,6 +36,4 @@ dependencies {
     implementation 'com.google.guava:guava:26.0-jre'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.3'
     implementation 'org.javatuples:javatuples:1.2'
-
-
 }
