--- a/Solver/build.gradle
+++ b/Solver/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'solver'
+    baseName = 'Solver'
     version =  '1.2'
 }
 
